# python-sgp4

./: .gitignore  .travis.yml  MANIFEST  MANIFEST.in  README.md  README.rst  pyproject.toml  science.txt  score.sh  setup.py  test.sh  test_ds_main.ipynb  tmp.py  tox.ini
.github/workflows/: ci.yml  test_package.yml
ci/: README
condarecipe/: meta.yaml  run_test.sh
extension/: SGP4.cpp  SGP4.h  wrapper.cpp
pure_python/: setup.py
sgp4/: SGP4-VER.TLE  __init__.py  alpha5.py  api.py  conveniences.py  cpropagation.pyx  earth_gravity.py  export.py  exporter.py  ext.py  functions.py  io.py  model.py  omm.py  propagation.py  sample_omm.csv  sample_omm.json  sample_omm.xml  sat2.py  setup.py  stations-tle.txt  stations.xml  tcppver.out  tests.py  tests_ds.py  tle-xml.py  transforms.json  transforms.py  wrapper.py  wulfgar.py
sgp4/fast/: model.py  propagation.py
